--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,13 @@
-body {
+/* body {
 	display: grid;
 	grid-template-columns: 2fr 8fr
-}
+} */
+
+.container {
+	padding: 1rem;
+	width: stretch;
+	height: auto;
+	display: none;
+	background: #515DA2;
+	opacity: .8;
+  }
