--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,9 @@
 body {
 	padding-top: 5rem;
   }
-  .starter-template {
+  /* .starter-template {
 	padding: 3rem 1.5rem;
-	text-align: center;
+	text-align: center; */
 /* body {
 	display: grid;
 	grid-template-columns: 2fr 8fr
