--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body {
 	padding-top: 5rem;
-	background: #00BFFF;
+	background-image: linear-gradient(#515DA2, white);
   }
   /* .starter-template {
 	padding: 3rem 1.5rem;
@@ -19,12 +19,45 @@ body {
 	opacity: .8;
   }
 
-  .card {
+  /* .card {
       position: absolute;
       right: 300px;
-  }
+  } */
 
-  .input-text{
-	/* font-size: 100px; // for say a select */
+.input-text {
 	width: 400px;
-	}
+}
+
+ .card {
+ position: relative;
+ width: 70%;
+ float: center;
+ height: fixed;
+ border: 3px solid  darkslateblue;
+ z-index: 1010101010
+ 
+ }
+	  
+ul {
+position: relative;
+/* width: 50%; */
+float: left;
+height: 100%;
+color: darkslateblue;
+font-size: 20px;
+z-index: 1010101010
+	  }
+
+
+.header {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+}	
+
+
+
+
+
+
